--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="50.0" prefHeight="411.0" prefWidth="500.0" vgap="50.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="50.0" prefHeight="411.0" prefWidth="500.0" styleClass="button" vgap="50.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <columnConstraints>
       <ColumnConstraints maxWidth="271.0" minWidth="10.0" prefWidth="99.0" />
       <ColumnConstraints maxWidth="271.0" minWidth="10.0" prefWidth="109.0" />
@@ -43,19 +43,19 @@
       <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
    </rowConstraints>
    <children>
-      <Button maxHeight="80.0" maxWidth="80.0" minHeight="130.0" minWidth="150.0" mnemonicParsing="false" prefHeight="130.0" prefWidth="150.0" style="-fx-background-color: #5c5cd6; -fx-background-radius: 50;" text="BLUE" textFill="#fffbfb" translateX="-40.0" translateY="120.0" GridPane.columnIndex="3" GridPane.rowIndex="8">
+      <Button maxHeight="80.0" maxWidth="80.0" minHeight="130.0" minWidth="150.0" mnemonicParsing="false" prefHeight="130.0" prefWidth="150.0" rotate="45.0" style="-fx-background-color: #5c5cd6; -fx-background-radius: 60;" textFill="#fffbfb" translateX="-40.0" translateY="120.0" GridPane.columnIndex="3" GridPane.rowIndex="8">
          <font>
             <Font name="Chalkboard" size="20.0" />
          </font></Button>
-      <Button maxHeight="80.0" maxWidth="80.0" minHeight="130.0" minWidth="150.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: #00cc00; -fx-background-radius: 50;" text="GREEN" textFill="WHITE" translateX="110.0" translateY="200.0" GridPane.columnIndex="1">
+      <Button maxHeight="80.0" maxWidth="80.0" minHeight="130.0" minWidth="150.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" rotate="45.0" style="-fx-background-color: #00cc00; -fx-background-radius: 60;" textFill="WHITE" translateX="110.0" translateY="200.0" GridPane.columnIndex="1">
          <font>
             <Font name="Chalkboard" size="18.0" />
          </font></Button>
-      <Button maxHeight="80.0" maxWidth="80.0" minHeight="130.0" minWidth="150.0" mnemonicParsing="false" prefHeight="130.0" prefWidth="150.0" style="-fx-background-color: #f44242; -fx-background-radius: 50;" text="RED" textFill="WHITE" translateX="30.0" translateY="300.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
+      <Button maxHeight="80.0" maxWidth="80.0" minHeight="130.0" minWidth="150.0" mnemonicParsing="false" prefHeight="130.0" prefWidth="150.0" rotate="45.0" style="-fx-background-color: #f44242; -fx-background-radius: 60;" textFill="WHITE" translateX="30.0" translateY="300.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
          <font>
             <Font name="Chalkboard" size="20.0" />
          </font></Button>
-      <Button maxHeight="80.0" maxWidth="80.0" minHeight="130.0" minWidth="150.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" rotate="45.0" style="-fx-background-color: #ffff00; -fx-background-radius: 60;" textFill="WHITE" translateX="30.0" translateY="290.0" GridPane.rowIndex="1">
+      <Button fx:id="yellow" onAction="#pressButton" maxHeight="80.0" maxWidth="80.0" minHeight="130.0" minWidth="150.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" rotate="45.0" style="-fx-background-color: #ffff00; -fx-background-radius: 60;" textFill="WHITE" translateX="30.0" translateY="290.0" GridPane.rowIndex="1">
          <font>
             <Font name="Chalkboard" size="15.0" />
          </font></Button>
